Fixes #287: Adjusted the conflicting z-index

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -6003,7 +6003,7 @@ hr{
 .timePicker{
     width: 9.5em !important;
     //layout editor drop down should show
-    z-index: 1070 !important;
+    z-index: 1100 !important;
 } 
 
 .weekDaySelect {
